include $(top_srcdir)/gnome-doc-utils.make

DOC_LINGUAS = ca cs de el en_GB es eu fr it oc pt_BR sl sr sr@latin sv zh_CN

DOC_MODULE = iagno

DOC_ENTITIES = \
	network-games.xml \
	legal.xml

DOC_FIGURES = \
	figures/ANIMATION.png \
	figures/BLOCK.png \
	figures/FIRST.png \
	figures/PLAYER.png \
	figures/START.png \
	figures/connect.png \
	figures/tables.png 

dist-hook: doc-dist-hook

-include $(top_srcdir)/git.mk
