include $(top_srcdir)/gnome-doc-utils.make

DOC_LINGUAS = ca cs de el en_GB es eu fr it oc pt_BR sl sr sr@latin sv zh_CN

DOC_MODULE = iagno

DOC_ENTITIES = \
	legal.xml

DOC_FIGURES = \
	figures/BLOCK.png \
	figures/FIRST.png \
	figures/START.png

dist-hook: doc-dist-hook

-include $(top_srcdir)/git.mk
