@YELP_HELP_RULES@
HELP_ID = iagno

HELP_MEDIA = \
	figures/block.png		\
	figures/first.png		\
	figures/iagno-gameover.png	\
	figures/iagno-video.ogv		\
	figures/logo32.png		\
	figures/logo.png		\
	figures/start.png

HELP_FILES = \
	2player.page			\
	ai-game.page			\
	bug-filing.page			\
	change-color.page		\
	develop.page			\
	documentation.page		\
	index.page			\
	legal.xml			\
	license.page			\
	play.page			\
	rules.page			\
	shortcuts.page			\
	sound.page			\
	strategy.page			\
	visual-results.page		\
	translate.page

HELP_LINGUAS = ca cs de el en_GB es eu fr it oc pt_BR sl sr sr@latin sv zh_CN

-include $(top_srcdir)/git.mk
