help_media = [
	'figures/block.png',
	'figures/first.png',
	'figures/iagno-video.ogv',
	'figures/logo32.png',
	'figures/logo.png',
	'figures/start.png'
]
help_files = [
    '2player.page',
	'ai-game.page',
	'bug-filing.page',
	'change-color.page',
	'develop.page',
	'documentation.page',
	'index.page',
	'legal.xml',
	'license.page',
	'play.page',
	'rules.page',
	'shortcuts.page',
	'sound.page',
	'strategy.page',
	'translate.page'
]


gnome.yelp(meson.project_name(),
    sources: help_files,
    media: help_media,
    symlink_media: true
)
