help_media = [
    'figures/alternative-start.png',
    'figures/alternative-start-1.png',
    'figures/alternative-start-2.png',
    'figures/alternative-start-3.png',
    'figures/block.png',
    'figures/first.png',
    'figures/iagno-video.ogv',
    'figures/logo32.png',
    'figures/logo.png',
    'figures/symmetric-start.png',
    'figures/usual-start.png'
]
help_files = [
    '2player.page',
    'ai-game.page',
    'bug-filing.page',
    'change-color.page',
    'develop.page',
    'documentation.page',
    'highlights.page',
    'index.page',
    'legal.xml',
    'license.page',
    'play.page',
    'rules.page',
    'shortcuts.page',
    'sound.page',
    'start-position.page',
    'strategy.page',
    'theme.page',
    'translate.page'
]


gnome.yelp(meson.project_name(),
    sources: help_files,
    media: help_media,
    symlink_media: true
)
