help_media = [
    'figures/alternative-start.png',
    'figures/alternative-start-1.png',
    'figures/alternative-start-2.png',
    'figures/alternative-start-3.png',
    'figures/move-1.png',
    'figures/move-2.png',
    'figures/move-3.png',
    'figures/move-4.png',
    'figures/org.gnome.Reversi.svg',
    'figures/symmetric-start.png',
    'figures/usual-start.png'
]

help_files = [
    '2player.page',
    'ai-game.page',
    'ai-level.page',
    'alternate.page',
    'bug-filing.page',
    'configure.page',
    'develop.page',
    'documentation.page',
    'example.page',
    'highlights.page',
    'index.page',
    'legal.xml',
    'license.page',
    'play.page',
    'rules.page',
    'select-game.page',
    'sound.page',
    'start-position.page',
    'strategy.page',
    'theme.page',
    'translate.page'
]

gnome.yelp(meson.project_name(),
    sources: help_files,
    media: help_media,
    symlink_media: true
)
